# flexchange

./: .dockerignore  .env.default  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  initial_data.sql  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer.json  docker-compose.extend.yml
.github/workflows/: continuous_integration.yml
deploy/: Dockerfile  docker-compose.yml
flexchange/: __init__.py  __main__.py  conftest.py  security.py  settings.py
flexchange/db/: base.py  reports.py  test_reports.py  utils.py
flexchange/db/dao/: __init__.py  dummy_dao.py  test_trade.py  test_user.py  trade.py  user.py
flexchange/db/models/: __init__.py  dummy_model.py  trade.py  trader.py  user.py
flexchange/services/: __init__.py
flexchange/templates/: pnl_daily.html
flexchange/tests/: __init__.py  test_dummy.py  test_trades.py
flexchange/web/: __init__.py  application.py  lifetime.py  templates.py
flexchange/web/api/: __init__.py  dependencies.py  router.py
flexchange/web/api/dummy/: __init__.py  views.py
flexchange/web/api/echo/: __init__.py  views.py
flexchange/web/api/login/: __init__.py  views.py
flexchange/web/api/monitoring/: __init__.py
flexchange/web/api/reports/: __init__.py  test_views.py  views.py
flexchange/web/api/trades/: __init__.py  schema.py  test_views.py  views.py
