[tool.poetry]
name = "flexchange"
version = "0.1.0"
description = "Test assignment for FlexPower company"
authors = ["SerSamgy <samgy7cool@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiosqlite = "^0.18.0"
fastapi = "^0.89.1"
httptools = "^0.5.0"
jinja2 = "^3.1.2"
parsel = "^1.8.1"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
pydantic = {version = "^1.10.4", extras = ["dotenv"]}
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
python-multipart = "^0.0.6"
SQLAlchemy = {version = "^2.0.0", extras = ["asyncio"]}
ujson = "^5.7.0"
uvicorn = { version = "^0.20.0", extras = ["standard"] }
yarl = "^1.8.2"

[tool.poetry.dev-dependencies]
anyio = "^3.6.2"
autoflake = "^1.6.1"
black = "^22.12.0"
flake8 = "~4.0.1"
httpx = "^0.23.3"
isort = "^5.11.4"
mypy = "^1.1.1"
pre-commit = "^3.0.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-env = "^0.8.1"
wemake-python-styleguide = "^0.17.0"

[tool.black]
line-length = 110
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["flexchange",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "FLEXCHANGE_ENVIRONMENT=pytest",
    "FLEXCHANGE_DB_FILE=test_db.sqlite3",
]

[fastapi-template.options]
project_name = "flexchange"
api_type = "rest"
enable_redis = "None"
enable_rmq = "None"
ci_type = "none"
enable_migrations = "None"
enable_taskiq = "None"
enable_kube = "None"
kube_name = "flexchange"
enable_routers = "True"
enable_kafka = "None"
enable_loguru = "None"
traefik_labels = "None"
add_dummy = "True"
orm = "sqlalchemy"
self_hosted_swagger = "None"
prometheus_enabled = "None"
sentry_enabled = "None"
otlp_enabled = "None"

[tool.coverage.run]
omit = [
    "*test_*",
    "*__init__*",
    "*conftest*"
]

[tool.coverage.report]
skip_covered = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
